fix bug z-index

--- a/view/frontend/web/css/managePost.css
+++ b/view/frontend/web/css/managePost.css
@@ -6,6 +6,7 @@
     color: white;
     border-radius: 5px;
     font-size: 10px;
+    z-index: 5;
 }
 
 .mp-post-disapproved {
